@@ -15,3 +15,4 @@ Page Template changes
       Bugs Fixed
 
         - The various *Python modules failed to import CompilerError.
+        - Security machinery changes in Zope 2.4 broke ZRPythonExpr
